--- a/index.html
+++ b/index.html
@@ -1,31 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-    <title>YouTube CLone</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <title>YouTube Clone</title>
+  </head>
+  <body>
     <nav>
-        <div id="header_left">
-            <i class="material-symbols-outlined">menu</i>
-            <img src="./assets/images/unnamed.png" alt="Youtube Logo">
-        </div>
-        <div class="header_search">
-            <form action="">
-                <input type="text" placeholder="Search">
-                <i class="material-symbols-outlined">search</i>
-            </form>
-
-        </div>
-        <div>
-            <i class="material-symbols-outlined"></i>
-            <i class="material-symbols-outlined"></i>
-            <i class="material-symbols-outlined">apps</i>
-            <i class="material-symbols-outlined">notifications</i>
-            <i class="material-symbols-outlined">account_circle</i>
-        </div>
+      <div id="header_left">
+        <i class="material-symbols-outlined">menu</i>
+        <img src="./assets/images/unnamed.png" alt="Youtube Logo" />
+      </div>
+      <div class="header_search">
+        <form action="">
+          <input type="text" placeholder="Search" />
+          <i class="material-symbols-outlined">search</i>
+        </form>
+      </div>
+      <div class="header_right">
+        <i class="material-symbols-outlined"></i>
+        <i class="material-symbols-outlined"></i>
+        <i class="material-symbols-outlined">apps</i>
+        <i class="material-symbols-outlined">notifications</i>
+        <i class="material-symbols-outlined">account_circle</i>
+      </div>
     </nav>
-</body>
+    <main>
+      <section class="sidebar">
+        <ul>
+          <li><i class="material-symbols-outlined"> home </i>Home</li>
+          <li><i class="material-symbols-outlined"> local_fire_department </i>Trending</li>
+          <li><i class="material-symbols-outlined"> subscriptions </i>Subscriptions</li>
+          <hr>
+          <li><i class="material-symbols-outlined"> library_add_check</i>Library</li>
+          <li><i class="material-symbols-outlined"> history</i>History</li>
+          <li><i class="material-symbols-outlined"> play_arrow</i>Your Videos</li>
+          <li><i class="material-symbols-outlined">watch_later </i>Watch Later</li>
+          <li><i class="material-symbols-outlined"> thumb_up </i>Liked Videos</li>
+        </ul>
+      </section>
+      <section class="main_content">
+        <h2>Recommend</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                
+                <div class="title_block">
+                    <img src="http://aninex.com/images/srvc/web_de_icon.png" alt="">
+                    <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                    <p>FutureCoders</p>
+                    <p>10M Views 3 Months ago</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+            <div class="card">
+                <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                <p>Top %programming languages to learn in 2021 | Best Programminglanguage to learn</p>
+                <p>FutureCoders</p>
+                <p>10M Views 3 Months ago</p>
+            </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
